[project]
name = "dice-large-numbers-lab"
version = "0.1.0"
description = "Probability simulation lab showing relative frequency convergence for dice rolls."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alberto Mateus P. da Gama" }]

[tool.pytest.ini_options]
pythonpath = ["."]
